--- a/video-js.css
+++ b/video-js.css
@@ -547,8 +547,7 @@ body.vjs-full-window {
   left: 0;
   right: 0;
   height: 3.0em;
-  background-color: #2B333F;
-  background-color: rgba(43, 51, 63, 0.7); }
+  background-color: #2B333F; }
 
 .vjs-has-started .vjs-control-bar {
   display: -webkit-box;
