--- a/video-js.css
+++ b/video-js.css
@@ -547,7 +547,8 @@ body.vjs-full-window {
   left: 0;
   right: 0;
   height: 3.0em;
-  background-color: #2B333F; }
+  background-color: #2B333F;
+  background-color: rgb(43, 51, 63); }
 
 .vjs-has-started .vjs-control-bar {
   display: -webkit-box;
